--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="bg-gray-50 dark:bg-gray-900"></div>
+    <div id="root" class="bg-white dark:bg-gray-800"></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
