--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       document.documentElement.className = localStorage.getItem("theme");
     </script>
   </head>
-  <body>
+  <body class="bg-neutral-200 dark:bg-gray-700">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="bg-white dark:bg-gray-800"></div>
 
